# opencl-raytracer

./: .gitignore  CMakeLists.txt  Makefile  README.md
res/cl/: addVec.cl  drawScreen.cl  ray_trace.cl
res/glsl/: base_frag.glsl  base_vert.glsl  frag.glsl  postproc_frag.glsl  postproc_vert.glsl  vert.glsl
src/: common.h  main.cpp
src/compute/: compute.h  handler.cpp  kernel.cpp  program.cpp
src/graphics/: framebuffer.cpp  graphics.h  mesh.cpp  shader.cpp  texture.cpp  window.cpp
src/utils/: io.cpp  time.cpp  utils.h
